Styling events page. Added date and time picker for events page. Added active day style.

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,10 @@
 
     {{content-for "head"}}
 
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/my-calendar.css">
 
